--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      //"launchUrl": "swagger",
+      "launchUrl": "swagger",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7044;http://localhost:5015",
       "environmentVariables": {
